Revert "fixes #509 - Nav link alignment fixes (#565)"
This reverts commit 74290d47fc3e0196017698c017ac587265071715.

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -16,6 +16,7 @@
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
+  float: left;
 
   &,
   &:visited {
@@ -23,35 +24,10 @@
   }
 }
 
-.wrapper {
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-}
-
-.nav-links {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: space-around;
-
-  li {
-    display: flex;
-  }
-}
-
-.trigger {
-  font-size: 19pt;
-  height: 96%;
-  margin-top: 2%;
-}
-
 .site-nav {
-  display: flex;
-  flex-direction: row-reverse;
-  height: 100%;
+  float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
+
   .nav-trigger {
     display: none;
   }
@@ -77,7 +53,6 @@
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
-    height: auto;
     text-align: right;
 
     label[for="nav-trigger"] {
